cmake_minimum_required(VERSION 3.25)
project(C_algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(C_algorithm
        "Chapter 1/Chapter1-1.c" "Chapter 1/Chapter1-2.c" "Chapter 1/Chapter1-Q1.c" "Chapter 1/Chapter1-Q2.c" "Chapter 1/Chapter1C-1.c" "Chapter 1/sum_while.c" "Chapter 1/sum_for.c" "Chapter 1/Chapter1-Q8.c" "Chapter 1/Chapter1-Q9.c" "Chapter 1/sum_for_pos.c" "Chapter 1/dbl_digits.c" "Chapter 1/multi99table.c" "Chapter 2/intary.c" "Chapter 2/intary_init.c" "Chapter 2/intdynamic.c" "Chapter 2/intary_dynamic.c" "Chapter 2/ary_max.c" "Chapter 2/ary_max_rand.c" "Chapter 2/rev_ary.c" "Chapter 2/card_conv.c" "Chapter 2/Chapter2-Q1.c" "Chapter 2/Chapter2-Q2.c" "Chapter 2/Chapter3-Q3.c" "Chapter 2/prime1.c" "Chapter 2/prime2.c"
        "Chapter 2/dayofyear.c"
        "Chapter 2/physical.c"
        "Chapter 3/ssearch1.c"
        "Chapter 3/ssearch1.c"
        "Chapter 3/ssearch2.c"
        "Chapter 3/search_sen.c"
        "Chapter 3/bin_search.c"
        "Chapter 3/bsearch1.c"
        "Chapter 3/bsearch2.c")
