cmake_minimum_required(VERSION 3.25)
project(C_algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(C_algorithm
        "Chapter01/Chapter1-1.c" "Chapter01/Chapter1-2.c" "Chapter01/Chapter1-Q1.c" "Chapter01/Chapter1-Q2.c" "Chapter01/Chapter1C-1.c" "Chapter01/sum_while.c" "Chapter01/sum_for.c" "Chapter01/Chapter1-Q8.c" "Chapter01/Chapter1-Q9.c" "Chapter01/sum_for_pos.c" "Chapter01/dbl_digits.c" "Chapter01/multi99table.c" "Chapter02/intary.c" "Chapter02/intary_init.c" "Chapter02/intdynamic.c" "Chapter02/intary_dynamic.c" "Chapter02/ary_max.c" "Chapter02/ary_max_rand.c" "Chapter02/rev_ary.c" "Chapter02/card_conv.c" "Chapter02/Chapter2-Q1.c" "Chapter02/Chapter2-Q2.c" "Chapter02/Chapter3-Q3.c" "Chapter02/prime1.c" "Chapter02/prime2.c"
        "Chapter02/dayofyear.c"
        "Chapter02/physical.c"
        "Chapter03/ssearch1.c"
        "Chapter03/ssearch1.c"
        "Chapter03/ssearch2.c"
        "Chapter03/search_sen.c"
        "Chapter03/bin_search.c"
        "Chapter03/bsearch1.c"
        "Chapter03/bsearch2.c"
        "Chapter03/kuku.c"
        "Chapter03/bsearch3.c"
        "Chapter04/IntStack.c"
        "Chapter04/IntStack.h" "Chapter04/IntStackTest.c" "Chapter04/IntQueue.c" "Chapter04/IntQueue.h" "Chapter04/IntQueueTest.c"
        "Chapter04/last.c"
        Chapter05/factorial.c
        Chapter05/euclid.c
        Chapter05/recur.c
        Chapter05/recur_nr2.c
        Chapter05/IntStack.c
        Chapter05/hanoi.c
        Chapter05/hanoi.c
        Chapter05/queen.c
        Chapter05/queen_b.c
        Chapter06/bubble1.c)
